# mavlink_cpp

./: .gitmodules  CMakeLists.txt  README.md
common/: common.h  common.hpp  mavlink_msg_camera_capture_status.hpp  mavlink_msg_camera_settings.hpp  mavlink_msg_storage_information.hpp
src/include/mavlink_cpp/common/: mavlink_msg_camera_image_captured.hpp
src/lib/: GCS.cpp  GCSv1.cpp
src/lib/include/mavlink_cpp/: GCS.h  GCSv1.h  mavlink_cpp.h  mavlink_types.h  utils.h
src/lib/include/mavlink_cpp/mavlink/common/: gtestsuite.hpp  mavlink_msg_camera_image_captured.hpp  mavlink_msg_camera_information.hpp  mavlink_msg_command_ack.hpp
src/lib/include/mavlink_cpp/mavlink/v2_cpp/: v2_cpp.h
src/lib/include/mavlink_cpp/mavlink/v2_cpp/common/: common.h  common.hpp
src/main/: mavlink_cpp_example0.cpp  mavlink_raw_example0.cpp  mavlink_udp.cpp  test0.cpp
